@@ -1,10 +1,10 @@
 use v6.c;
 
+use Bailador::App;
 use Bailador::Route;
 use Bailador::Route::Prefix;
 use Bailador::Route::Simple;
 use Bailador::Route::StaticFile;
-use Bailador::Tools;
 
 unit module Bailador::RouteHelper;
 
@@ -21,9 +21,9 @@ multi sub make-simple-route(Str $method, Pair $x) is export {
     Bailador::Route::Simple.new( :$method, url-matcher => $x.key, code => $x.value);
 }
 
-sub make-static-dir-route(Pair $x) is export {
+sub make-static-dir-route(Pair $x, Bailador::App $app) is export {
     my $path = $x.key;
-    my IO $directory = $x.value ~~ IO ?? $x.value !! get-app-root.child($x.value.Str);
+    my IO $directory = $x.value ~~ IO ?? $x.value !! $app.location.IO.child($x.value.Str);
     return Bailador::Route::StaticFile.new(method => 'GET', url-matcher => $x.key, directory => $directory);
 }
 
