@@ -11,7 +11,7 @@ plan 3;
 
 class MyOwnWebApp is Bailador::App {
     submethod BUILD (|) {
-        self.location = $?FILE.IO.dirname;
+        self.location( $?FILE.IO.dirname );
         self.renderer = Bailador::Template::Mustache.new;
         self.add_route: make-simple-route('GET', '/' => sub { self.template: 'simple.mustache', { 'foo' => 'bar' } });
     }
