@@ -10,7 +10,7 @@ plan 3;
 
 class MyOwnWebApp is Bailador::App {
     submethod BUILD (|) {
-        self.location = $?FILE.IO.dirname;
+        self.location( $?FILE.IO.dirname );
         self.add_route: make-simple-route('GET', '/' => sub { self.template: 'simple.tt', 'bar' });
     }
 }
