@@ -19,7 +19,7 @@ is $resp1[0], 200;
 is-deeply $resp1[1], ["Content-Type" => "text/html"];
 ok $resp1[2] ~~ /'a happy bar'\r?\n/;
 
-Bailador::import(rootdir => $?FILE.IO.dirname);
+#Bailador::import(rootdir => $?FILE.IO.dirname);
 
 get '/b' => sub { template 'simple.mustache', { 'foo' => 'bar' } }
 
